<resources>
    <string name="app_name">Random Character Names</string>
    <string name="generate">Generate</string>
    <string name="female">female</string>
    <string name="name_length">name length</string>
    <string name="_5" translatable="false">5</string>
    <string name="male">male</string>
    <string name="single">Single</string>
    <string name="batch">Batch</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="clean">Clean</string>
    <string name="history_tip">Tap and hold to delete individual item</string>
</resources>
