<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miturtow.randomGeneratedNames.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/text_window"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@android:drawable/editbox_background"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seekBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="187dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="16dp"
        android:text="@string/_5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_window" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:max="7"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarText" />

    <TextView
        android:id="@+id/name_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="123dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_length">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/male"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="170dp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:id="@+id/generate"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/generate"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:numColumns="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:textOff="@string/batch"
        android:textOn="@string/single"
        app:layout_constraintBottom_toTopOf="@+id/generate"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>